fix camera not showing in home page

--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -1,3 +1,6 @@
 page-tabs {
 
 }
+ion-app.cameraView page-tabs {
+  display: none;
+}
